force-app/main/default/objects/Quote_Edition__c/Quote_Edition__c.object-meta.xml
<CustomObject>
    <description>A junction object between Quote and Edition. Used for PsP ( Product Search Plugin ) by CPQ.</description>
    <label>Quote Edition</label>
    <nameField>
        <label>Quote Edition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Editions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>