force-app/main/default/objects/Quote_Edition__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <description>Master is Edition</description>
    <inlineHelpText>Master is Edition</inlineHelpText>
    <label>Edition</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Edition__c.Edition_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled, Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Quote Editions</relationshipLabel>
    <relationshipName>Quote_Editions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>