force-app/main/default/objects/Quote_Edition__c/fields/PRule_Category__c.field-meta.xml
<CustomField>
    <fullName>PRule_Category__c</fullName>
    <description>This formula field is used to show value of Edition PRule_Category field.</description>
    <formula>Text(Edition__r.PRule_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRule_Category</label>
    <type>Text</type>
</CustomField>