force-app/main/default/objects/Quote_Edition__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>Master is Quote</description>
    <inlineHelpText>Master is Quote</inlineHelpText>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quote Editions</relationshipLabel>
    <relationshipName>Quote_Editions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>